--- a/movies/SnowWhite.json
+++ b/movies/SnowWhite.json
@@ -1,5 +1,6 @@
 {
     "title": "Snow White",
+    "imdb": "https://www.imdb.com/title/tt0029583",
     "events": [{
         "time": "4:11",
         "time_min": 4,
